--- a/platformio.ini
+++ b/platformio.ini
@@ -10,18 +10,16 @@
 
 [env:esp32cam]
 platform = espressif32
-;board = esp32cam
 board = nodemcu-32s
 framework = arduino
 board_build.mcu = esp32
 build_flags = -DCORE_DEBUG_LEVEL=5
 board_build.partitions = min_spiffs.csv
 upload_protocol = espota
-;upload_port = esp32-24d7eb101660.local
 upload_port = esp32-246f28169440.local
 lib_deps = 
 	adafruit/Adafruit GFX Library@^1.11.3
 	adafruit/Adafruit SH110X@^2.1.7
 	knolleary/PubSubClient@^2.8
-	kkloesener/MFRC522_I2C@^1.0
 	ivanseidel/LinkedList@0.0.0-alpha+sha.dac3874d28
+	miguelbalboa/MFRC522@^1.4.10
